# irodori-extension-milvus

./: Cargo.toml  README.md  connector.config.json  connector.source.json  irodori.extension.json
native/source/: README.md
src/: lib.rs
